2003-04-18  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3172389 - Safari doesn't parse attributes within the OBJECT tag

        Reviewed by dave.

        * khtml/rendering/render_frames.cpp:
        (RenderPartObject::updateWidget): add attributes from within the OBJECT tag to params, the list of attributes we pass to plug-ins. Don't override attributes that are already in params.

2003-04-18  David Hyatt  <hyatt@apple.com>

	Make sure display:none is ignored and not accidentally mutated
	to display:block.
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-04-17  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed a bug caught by libgmalloc on Vicki's test machine

        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::detach): Make sure we don't have a dangling paint device after
        detaching from the KTHMLView.
        (DocumentImpl::setPaintDevice): Allow a 0 parameter.
        * kwq/WebCoreBridge.mm:
        (nowPrinting): Handle the case of a 0 paint device.

2003-04-15  David Hyatt  <hyatt@apple.com>

	Missed a piece of the renaming on lowestPosition/rightmostPosition.
	This was already reviewed by darin.  Just missed landing one file.
	
        Reviewed by darin

        * khtml/rendering/render_box.cpp:
        (RenderBox::lowestPosition):
        (RenderBox::rightmostPosition):

2003-04-15  Trey Matteson  <trey@apple.com>

	3210061 - Forms auto-fill ignores maxlength attribute

        Reviewed by Maciej.

        * kwq/KWQTextField.mm:
        (-[KWQTextField setStringValue:]):  We now trim down incoming values
	to fit the maxlength criteria.  Matches the way we enforce this constraint
	when maxlength is set.

2003-04-15  David Hyatt  <hyatt@apple.com>

	Fix 3227983 and 3229592, both the same bug involving a movable type
	template:

	letter-spacing: .none;

	Fix is to make error-handling of exprs more generic.
	
        Reviewed by darin

        * khtml/css/parser.y:
